fix ensure OpenRewrite generates files in correct project directory